# NMTLunabotics2024

./: README.md  configuration.nix  move_base_fake_result.txt
arduino/big_motors/: big_motors.ino
arduino/big_motors_can/: big_motors_can.ino  can_msg_def.h
arduino/bucket_actuator_can/: bucket_actuator_can.ino  helpers.hpp
arduino/can/: arduino_lib.hpp  can.ino
arduino/can_arduino_r4_test/: can_arduino_r4_test.ino
arduino/can_test/: can_test.ino
arduino/dual_actuators/: arduino_lib.hpp  dual_actuators.ino
arduino/dual_actuators_can/: arduino_to_can.ino  dual_actuators_can.ino  helpers.hpp
arduino/goliath/: goliath.ino
arduino/leds/: leds.ino
arduino/linear_actuators/: linear_actuators.cpp  linear_actuators.ino  linear_actuators2.cpp  linear_actuators_2.ino
arduino/linear_actuators/other/: calibrate.ino
arduino/motors/: main_bus.hpp  motors.ino
arduino/pitch_with_error/: pitch_without_error.ino
arduino/shared_lib/: arduino_lib.hpp
can_config/: canbus  canbus_xavier
can_schema/: Makefile  README.md  can_schema.py  main_bus.hpp  main_bus.kcd  main_bus.yaml  monitor.sh  test.py
canbed/: README.md
canbed/big_motors/: big_motors.ino
canbed/can/: can.cpp  main.cpp
canbed/dual_actuators/: dual_actuators.ino
canbed/linear_actuators/: data.txt  data2.txt  linear_actuators.bkp.bkp  linear_actuators.ino  linear_actuators_2.ino  linear_actuators_pid.bkp  linear_actuators_pid.ino  view.py
canbed/motors/: motors.ino
canbed/pitch_with_error/: pitch_with_error.ino
canbed/shared_lib/: arduino_lib.hpp
catkin_ws/: Makefile  compile_flags.txt  frames.gv  topics.txt
catkin_ws/src/actions/: CMakeLists.txt  package.xml
catkin_ws/src/actions/src/: digging_autonomy_node.cpp  dumping_autonomy_node.cpp  fuckit.cpp  funkenstein.cpp
catkin_ws/src/actions/srv/: execute_digging_autonomy.srv  execute_script.srv
catkin_ws/src/actuator_ctrl/: package.xml
catkin_ws/src/actuator_ctrl/config/: actuator_ctrl_config.yaml
catkin_ws/src/actuator_ctrl/launch/: motor.launch
catkin_ws/src/actuator_ctrl/src/: actuator_ctrl_node.cpp
catkin_ws/src/camera_stream/: CMakeLists.txt  package.xml
catkin_ws/src/camera_stream/src/: camera_stream_node.cpp
catkin_ws/src/can_convert/: CMakeLists.txt
catkin_ws/src/can_convert/src/: can_convert_node.cpp
catkin_ws/src/can_raw/: CMakeLists.txt
catkin_ws/src/can_raw/msg/: CanFrame.msg
catkin_ws/src/can_raw/src/: can_interface.cpp  can_interface.hpp  can_raw_node.cpp
catkin_ws/src/can_raw_input/: CMakeLists.txt  package.xml
catkin_ws/src/control/: CMakeLists.txt  package.xml
catkin_ws/src/control/config/: base_local_planner_params.yaml  costmap_common.yaml  costmap_common_params.yaml  costmap_global.yaml  costmap_local.yaml  global_costmap_params.yaml  local_costmap_params.yaml  planner.yaml  teleop_logitech.yaml
catkin_ws/src/control/config/other_shit/: base_local_planner_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml  move_base_config.yaml
catkin_ws/src/control/launch/: hud.launch  move_base.launch  teleop.launch
catkin_ws/src/control/src/: dump_node.cpp
catkin_ws/src/digging_autonomy/: CMakeLists.txt  package.xml
catkin_ws/src/digging_autonomy/src/: digging_autonomy_node.cpp
catkin_ws/src/dumping_autonomy/: CMakeLists.txt  package.xml
catkin_ws/src/dumping_autonomy/src/: dumping_autonomy_node.cpp
catkin_ws/src/heartbeat/src/: heartbeat_client_node.cpp
catkin_ws/src/hud/launch/: hud.launch
catkin_ws/src/hud/src/: hud_node.cpp
catkin_ws/src/leds/: CMakeLists.txt  package.xml
catkin_ws/src/leds/src/: leds_node.cpp
catkin_ws/src/limiter/: CMakeLists.txt  package.xml
catkin_ws/src/limiter/src/: gridmap_limiter.cpp  limiter.hpp  pointcloud_limiter.cpp
catkin_ws/src/mapping/: CMakeLists.txt  package.xml
catkin_ws/src/mapping/config/: .test_map.yaml.swp  mapping.yaml  postprocessor_pipeline.yaml  tags.yaml  tagsettings.yaml  test_map.yaml
catkin_ws/src/mapping/launch/: .crop_points.launch.swp  .mapping.launch.swp  .test_map.launch.swp  april_tag_loc.launch  cameras.launch  continuous_detection.launch  crop_points.launch  mapping.launch  test_map.launch
catkin_ws/src/mapping/src/: april_tag_loc.cpp  create_occupancy.cpp  cvt_occupancy.cpp  marker_node.cpp
catkin_ws/src/mapping/urdf/: goliath.urdf
catkin_ws/src/motor_ctrl/config/: motor_ctrl_config.yaml
catkin_ws/src/motor_ctrl/launch/: motor.launch
catkin_ws/src/motor_ctrl/src/: motor_ctrl_node.cpp
catkin_ws/src/move_to/: CMakeLists.txt  package.xml
catkin_ws/src/move_to/src/: move_to_node.cpp
catkin_ws/src/move_to/srv/: move_to.srv
catkin_ws/src/vio/: CMakeLists.txt  package.xml
catkin_ws/src/vio/src/: vio_node.cpp
programs/: autonomy_light.sh
tools/: move_base_fake_result.sh  reset_ros.sh  restart_services.sh  stop.sh  stop_move_base.sh  usbs.sh
user/abethel/: measurements.txt
user/abethel/arduino_tools/: .gitignore  Makefile  README.md  arduino_makefile.mk
