<?xml version="1.0"?>
<package format="2">
  <name>control</name>
  <version>0.0.1</version>
  <description>A ROS package for control functionalities.</description>

  <!-- One or more maintainers. Replace with your name and email -->
  <maintainer email="your_email@example.com">Your Name</maintainer>

  <!-- One or more authors. Optional, but recommended. Replace with your name -->
  <author email="your_email@example.com">Your Name</author>

  <!-- License of this package. Replace with your chosen license -->
  <license>TODO: License declaration</license>

  <!-- Url tags are optional, but useful for linking source code, bug trackers, etc. -->
  <url type="website">http://wiki.ros.org/control</url>
  <url type="repository">URL to your repository</url>
  <url type="bugtracker">URL to your bug tracker</url>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>actionlib</depend>
  <depend>move_base_msgs</depend>
  <depend>tf</depend>
  <depend>geometry_msgs</depend>
  <depend>actions</depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>

