<?xml version="1.0"?>
<package format="2">
    <name>digging_autonomy</name>
    <version>0.1.0</version>
    <description>The digging_autonomy package</description>

    <maintainer email="alex.b.bethel@gmail.com">Alex Bethel</maintainer>
    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roslaunch</build_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>grid_map_ros</depend>
    <depend>grid_map_msgs</depend>
    <depend>tf</depend>
    <depend>apriltag_ros</depend>
</package>
