<?xml version="1.0"?>
<package format="2">
  <name>leds</name>
  <version>0.0.1</version>
  <description>LED controller</description>

  <maintainer email="abethel@cs.nmt.edu">Alex Bethel</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>can_raw</depend>
</package>

