<?xml version="1.0"?>
<package format="2">
  <name>limiter</name>
  <version>0.0.0</version>
  <description>The limiter package</description>

  <maintainer email="alex@todo.todo">alex</maintainer>

  <license>GPLv3</license>

  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
</package>
